fix: fixed styling of links on collapsed sidebar
#33

--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -92,7 +92,7 @@ body {
 
 .rightInnerContainer {
   width: 100%;
-  max-width: 1400px;
+  max-width: 1250px;
   padding: 0 4rem;
 }
 
